--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-altair==5.4.1
+altair==4.1.0
 annotated-types==0.7.0
 attrs==24.2.0
 blinker==1.8.2
@@ -7,6 +7,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+entrypoints==0.4
 gitdb==4.0.11
 GitPython==3.1.43
 google-ai-generativelanguage==0.6.10
@@ -17,7 +18,7 @@ google-auth-httplib2==0.2.0
 google-generativeai==0.8.3
 googleapis-common-protos==1.65.0
 grpcio==1.66.2
-grpcio-status==1.66.2
+grpcio-status==1.43.0
 httplib2==0.22.0
 idna==3.10
 importlib-metadata==8.5.0
@@ -33,7 +34,7 @@ packaging==24.1
 pandas==2.2.3
 pillow==10.4.0
 proto-plus==1.24.0
-protobuf==5.28.2
+protobuf==3.20.3
 pyarrow==17.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.1
@@ -45,6 +46,7 @@ Pympler==1.1
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
+pywin32==307
 referencing==0.35.1
 requests==2.32.3
 rich==13.9.2
@@ -55,6 +57,7 @@ six==1.16.0
 smmap==5.0.1
 streamlit==1.12.0
 toml==0.10.2
+toolz==1.0.0
 tornado==6.4.1
 tqdm==4.66.5
 typing-extensions==4.12.2
